<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/action_help"
        android:icon="@drawable/ic_baseline_help_outline"
        app:showAsAction="ifRoom" />
</menu>