<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_click_btn"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_meetingDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_vertical_padding"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:maxLines="1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        tools:text="@string/metingDialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_meetingDialog"
        android:paddingHorizontal="@dimen/activity_vertical_padding"
        android:elevation="2dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_viewDialog"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_infoDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_padding"
                android:maxLines="1"
                android:textColor="@android:color/black"
                tools:text="@string/info" />

            <TextView
                android:id="@+id/tv_docDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/activity_vertical_padding"
                android:textColor="@android:color/black"
                tools:text="@string/upload_document_file" />

            <TextView
                android:id="@+id/tv_audioDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="@dimen/activity_vertical_padding"
                android:textColor="@android:color/black"
                tools:text="@string/upload_audio_file" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:background="@android:color/black"
                android:contentDescription="@string/meting" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUpdateDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/update"
                    android:textColor="@drawable/cr_txt_click_foreground_activated"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDeleteDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/delete"
                    android:textColor="@drawable/cr_txt_click_foreground_activated"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>