<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.courses.JoinActivity">

    <include
        layout="@layout/app_bar"/>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:background="@drawable/bg_costume"
                android:elevation="2dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_view"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/app_name"
                    android:elevation="2dp"
                    android:src="@mipmap/ic_launcher">
                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtClassId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/id_class"
                        android:hint="@string/id_class"
                        android:inputType="text"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/activity_vertical_margin"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                        android:background="@drawable/bg_click_btn"
                        android:text="@string/action_search"
                        android:textColor="@drawable/cr_txt_click_foreground_foreground_inverse"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

           <androidx.core.widget.NestedScrollView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_below="@id/linear">

               <LinearLayout
                   android:id="@+id/labeled"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@drawable/bg_costume"
                   android:elevation="2dp"
                   android:orientation="vertical"
                   android:layout_marginVertical="4dp"
                   android:padding="@dimen/activity_horizontal_margin"
                   tools:ignore="UselessParent">

                   <EditText
                       android:id="@+id/edtUniversity"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:autofillHints="@string/university"
                       android:hint="@string/university"
                       android:enabled="false"
                       android:inputType="text"
                       android:textSize="14sp" />

                   <EditText
                       android:id="@+id/edtFaculty"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:autofillHints="@string/faculty"
                       android:hint="@string/faculty"
                       android:enabled="false"
                       android:inputType="text"
                       android:textSize="14sp" />

                   <EditText
                       android:id="@+id/edtStudy"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:autofillHints="@string/study_program"
                       android:hint="@string/study_program"
                       android:enabled="false"
                       android:inputType="text"
                       android:textSize="14sp" />

                   <EditText
                       android:id="@+id/edtSemester"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:autofillHints="@string/semester"
                       android:hint="@string/semester"
                       android:enabled="false"
                       android:inputType="number"
                       android:textSize="14sp" />

                   <EditText
                       android:id="@+id/edtCourses"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:autofillHints="@string/courses"
                       android:hint="@string/courses"
                       android:enabled="false"
                       android:inputType="text"
                       android:textSize="14sp" />

                   <Button
                       android:id="@+id/btnJoin"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/activity_horizontal_margin"
                       android:background="@drawable/bg_click_btn"
                       android:enabled="false"
                       android:text="@string/join"
                       android:textColor="@drawable/cr_txt_click_foreground_foreground_inverse"
                       android:textSize="16sp"/>
               </LinearLayout>
           </androidx.core.widget.NestedScrollView>
        </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>