<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgViewUserNav"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="@dimen/activity_vertical_padding"
            tools:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnEditProfileNav"
                style="?android:attr/checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_profile"
                android:src="@drawable/ic_baseline_create"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tvUserNameNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:textSize="14sp"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        tools:text="@string/nav_header_title"
        tools:ignore="EllipsizeMaxLines" />

    <TextView
        android:id="@+id/tvEmailNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/nav_header_subtitle"
        android:textSize="12sp"
        android:maxLines="1"/>
</LinearLayout>